--- a/src/index.css
+++ b/src/index.css
@@ -35,28 +35,28 @@ body {
 }
 
 h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
+  font-size: 3.2rem;
+  line-height: 1;
 }
 h2 {
-  font-size: 2.8em;
-  line-height: 1.1;
+  font-size: 2.8rem;
+  line-height: 1;
 }
 h3 {
-  font-size: 2.4em;
-  line-height: 1.1;
+  font-size: 2.4rem;
+  line-height: 1;
 }
 h4 {
-  font-size: 2em;
-  line-height: 1.1;
+  font-size: 2rem;
+  line-height: 1;
 }
 h5 {
-  font-size: 1.6em;
-  line-height: 1.1;
+  font-size: 1.6rem;
+  line-height: 1;
 }
 h6 {
-  font-size: 1.2em;
-  line-height: 1.1;
+  font-size: 1.2rem;
+  line-height: 1;
 }
 
 button {
