--- a/src/outdex.css
+++ b/src/outdex.css
@@ -562,6 +562,10 @@ video {
   position: absolute;
 }
 
+.relative {
+  position: relative;
+}
+
 .left-0 {
   left: 0px;
 }
@@ -570,21 +574,25 @@ video {
   top: 0px;
 }
 
-.z-50 {
-  z-index: 50;
-}
-
-.row-span-2 {
-  grid-row: span 2 / span 2;
-}
-
 .row-span-3 {
   grid-row: span 3 / span 3;
+}
+
+.m-4 {
+  margin: 1rem;
 }
 
 .my-4 {
   margin-top: 1rem;
   margin-bottom: 1rem;
+}
+
+.mt-1 {
+  margin-top: 0.25rem;
+}
+
+.mt-2 {
+  margin-top: 0.5rem;
 }
 
 .mt-3 {
@@ -603,8 +611,20 @@ video {
   display: grid;
 }
 
+.h-0 {
+  height: 0px;
+}
+
 .h-16 {
   height: 4rem;
+}
+
+.h-\[100px\] {
+  height: 100px;
+}
+
+.h-\[250px\] {
+  height: 250px;
 }
 
 .h-full {
@@ -620,12 +640,24 @@ video {
   height: 100vh;
 }
 
+.h-\[400px\] {
+  height: 400px;
+}
+
 .w-0 {
   width: 0px;
 }
 
+.w-\[100px\] {
+  width: 100px;
+}
+
 .w-\[400px\] {
   width: 400px;
+}
+
+.w-\[50px\] {
+  width: 50px;
 }
 
 .w-full {
@@ -660,16 +692,8 @@ video {
   grid-template-columns: repeat(5, minmax(0, 1fr));
 }
 
-.grid-cols-\[50px_1fr\] {
-  grid-template-columns: 50px 1fr;
-}
-
 .grid-cols-\[1fr_50px\] {
   grid-template-columns: 1fr 50px;
-}
-
-.grid-rows-\[40px_40px_1fr\] {
-  grid-template-rows: 40px 40px 1fr;
 }
 
 .grid-rows-\[40px_40px_40px_1fr\] {
@@ -720,16 +744,12 @@ video {
   text-wrap: nowrap;
 }
 
-.rounded-md {
-  border-radius: 0.375rem;
+.rounded-lg {
+  border-radius: 0.5rem;
 }
 
 .rounded-none {
   border-radius: 0px;
-}
-
-.rounded-lg {
-  border-radius: 0.5rem;
 }
 
 .border-b-2 {
@@ -783,11 +803,6 @@ video {
   padding-right: 0.5rem;
 }
 
-.px-3 {
-  padding-left: 0.75rem;
-  padding-right: 0.75rem;
-}
-
 .px-5 {
   padding-left: 1.25rem;
   padding-right: 1.25rem;
@@ -801,11 +816,6 @@ video {
 .px-8 {
   padding-left: 2rem;
   padding-right: 2rem;
-}
-
-.py-1 {
-  padding-top: 0.25rem;
-  padding-bottom: 0.25rem;
 }
 
 .pb-2 {
