--- a/src/index.css
+++ b/src/index.css
@@ -77,6 +77,45 @@ button:focus,
 button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
 }
+input,
+select {
+  margin: 0;
+  border: 2px solid #fff3;
+  border-radius: 8px;
+  padding: 4px 8px;
+  font-size: 1.6rem;
+  box-sizing: border-box;
+  align-items: center;
+  line-height: normal;
+  overflow-x: clip;
+  overflow-y: clip;
+}
+
+select {
+  appearance: none;
+  background-image: linear-gradient(45deg, transparent 50%, gray 50%),
+    linear-gradient(135deg, gray 50%, transparent 50%),
+    linear-gradient(to right, #ccc, #ccc);
+  background-position: calc(100% - 20px) 19px,
+    calc(100% - 15px) 19px, calc(100% - 40px) 8px;
+  background-size: 5px 5px, 5px 5px, 1px 1.6rem;
+  background-repeat: no-repeat;
+}
+select:focus {
+  appearance: none;
+  background-image: linear-gradient(135deg, transparent 50%, gray 50%),
+    linear-gradient(45deg, gray 50%, transparent 50%),
+    linear-gradient(to right, #ccc, #ccc);
+  background-position: calc(100% - 20px) 19px,
+    calc(100% - 15px) 19px, calc(100% - 40px) 8px;
+  background-size: 5px 5px, 5px 5px, 1px 1.6rem;
+  background-repeat: no-repeat;
+}
+
+label {
+  font-size: 1.6rem;
+  margin-left: 4px;
+}
 
 @media (prefers-color-scheme: light) {
   :root {
