--- a/src/outdex.css
+++ b/src/outdex.css
@@ -574,8 +574,7 @@ video {
   grid-row: span 3 / span 3;
 }
 
-.my-4 {
-  margin-top: 1rem;
+.mb-4 {
   margin-bottom: 1rem;
 }
 
@@ -585,10 +584,6 @@ video {
 
 .mt-2 {
   margin-top: 0.5rem;
-}
-
-.mt-3 {
-  margin-top: 0.75rem;
 }
 
 .mt-4 {
@@ -609,10 +604,6 @@ video {
 
 .h-16 {
   height: 4rem;
-}
-
-.h-\[100px\] {
-  height: 100px;
 }
 
 .h-\[250px\] {
@@ -636,12 +627,16 @@ video {
   height: 100vh;
 }
 
-.w-0 {
-  width: 0px;
+.max-h-0 {
+  max-height: 0px;
 }
 
-.w-\[100px\] {
-  width: 100px;
+.max-h-full {
+  max-height: 100%;
+}
+
+.w-0 {
+  width: 0px;
 }
 
 .w-\[400px\] {
@@ -684,12 +679,12 @@ video {
   grid-template-columns: repeat(5, minmax(0, 1fr));
 }
 
-.grid-cols-\[1fr_50px\] {
-  grid-template-columns: 1fr 50px;
+.grid-cols-\[75px_75px\] {
+  grid-template-columns: 75px 75px;
 }
 
-.grid-rows-\[40px_40px_40px_1fr\] {
-  grid-template-rows: 40px 40px 40px 1fr;
+.grid-rows-\[50px_50px_50px\] {
+  grid-template-rows: 50px 50px 50px;
 }
 
 .flex-row {
@@ -698,6 +693,10 @@ video {
 
 .flex-col {
   flex-direction: column;
+}
+
+.flex-wrap {
+  flex-wrap: wrap;
 }
 
 .items-center {
@@ -720,16 +719,16 @@ video {
   gap: 0.5rem;
 }
 
-.gap-3 {
-  gap: 0.75rem;
-}
-
 .gap-4 {
   gap: 1rem;
 }
 
 .overflow-hidden {
   overflow: hidden;
+}
+
+.overflow-clip {
+  overflow: clip;
 }
 
 .overflow-y-scroll {
@@ -761,9 +760,44 @@ video {
   background-color: #0003;
 }
 
+.bg-amber-500 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(245 158 11 / var(--tw-bg-opacity, 1));
+}
+
+.bg-amber-600 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(217 119 6 / var(--tw-bg-opacity, 1));
+}
+
+.bg-blue-500 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(59 130 246 / var(--tw-bg-opacity, 1));
+}
+
+.bg-emerald-500 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(16 185 129 / var(--tw-bg-opacity, 1));
+}
+
 .bg-emerald-900 {
   --tw-bg-opacity: 1;
   background-color: rgb(6 78 59 / var(--tw-bg-opacity, 1));
+}
+
+.bg-indigo-500 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(99 102 241 / var(--tw-bg-opacity, 1));
+}
+
+.bg-lime-500 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(132 204 22 / var(--tw-bg-opacity, 1));
+}
+
+.bg-neutral-100 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(245 245 245 / var(--tw-bg-opacity, 1));
 }
 
 .bg-neutral-600 {
@@ -774,6 +808,26 @@ video {
 .bg-neutral-700 {
   --tw-bg-opacity: 1;
   background-color: rgb(64 64 64 / var(--tw-bg-opacity, 1));
+}
+
+.bg-orange-500 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(249 115 22 / var(--tw-bg-opacity, 1));
+}
+
+.bg-pink-500 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(236 72 153 / var(--tw-bg-opacity, 1));
+}
+
+.bg-purple-500 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(168 85 247 / var(--tw-bg-opacity, 1));
+}
+
+.bg-red-500 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(239 68 68 / var(--tw-bg-opacity, 1));
 }
 
 .bg-sky-500 {
@@ -790,6 +844,11 @@ video {
   background-color: transparent;
 }
 
+.bg-yellow-500 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(234 179 8 / var(--tw-bg-opacity, 1));
+}
+
 .p-4 {
   padding: 1rem;
 }
@@ -797,6 +856,11 @@ video {
 .px-2 {
   padding-left: 0.5rem;
   padding-right: 0.5rem;
+}
+
+.px-4 {
+  padding-left: 1rem;
+  padding-right: 1rem;
 }
 
 .px-5 {
@@ -809,18 +873,14 @@ video {
   padding-right: 1.5rem;
 }
 
-.px-8 {
-  padding-left: 2rem;
-  padding-right: 2rem;
+.py-2 {
+  padding-top: 0.5rem;
+  padding-bottom: 0.5rem;
 }
 
 .py-4 {
   padding-top: 1rem;
   padding-bottom: 1rem;
-}
-
-.pb-2 {
-  padding-bottom: 0.5rem;
 }
 
 .pl-6 {
@@ -837,14 +897,14 @@ video {
   line-height: 2.25rem;
 }
 
-.text-lg {
-  font-size: 1.125rem;
-  line-height: 1.75rem;
-}
-
 .text-amber-600 {
   --tw-text-opacity: 1;
   color: rgb(217 119 6 / var(--tw-text-opacity, 1));
+}
+
+.text-black {
+  --tw-text-opacity: 1;
+  color: rgb(0 0 0 / var(--tw-text-opacity, 1));
 }
 
 .text-blue-600 {
@@ -930,32 +990,32 @@ body {
 
 h1 {
   font-size: 3.2rem;
-  line-height: 1;
+  line-height: 1.2;
 }
 
 h2 {
   font-size: 2.8rem;
-  line-height: 1;
+  line-height: 1.2;
 }
 
 h3 {
   font-size: 2.4rem;
-  line-height: 1;
+  line-height: 1.2;
 }
 
 h4 {
   font-size: 2rem;
-  line-height: 1;
+  line-height: 1.2;
 }
 
 h5 {
   font-size: 1.6rem;
-  line-height: 1;
+  line-height: 1.2;
 }
 
 h6 {
   font-size: 1.2rem;
-  line-height: 1;
+  line-height: 1.2;
 }
 
 button {
@@ -1000,8 +1060,8 @@ select {
   background-image: linear-gradient(45deg, transparent 50%, gray 50%),
     linear-gradient(135deg, gray 50%, transparent 50%),
     linear-gradient(to right, #ccc, #ccc);
-  background-position: calc(100% - 20px) 19px,
-    calc(100% - 15px) 19px, calc(100% - 40px) 8px;
+  background-position: calc(100% - 20px) 19px, calc(100% - 15px) 19px,
+    calc(100% - 40px) 8px;
   background-size: 5px 5px, 5px 5px, 1px 1.6rem;
   background-repeat: no-repeat;
 }
@@ -1013,8 +1073,8 @@ select:focus {
   background-image: linear-gradient(135deg, transparent 50%, gray 50%),
     linear-gradient(45deg, gray 50%, transparent 50%),
     linear-gradient(to right, #ccc, #ccc);
-  background-position: calc(100% - 20px) 19px,
-    calc(100% - 15px) 19px, calc(100% - 40px) 8px;
+  background-position: calc(100% - 20px) 19px, calc(100% - 15px) 19px,
+    calc(100% - 40px) 8px;
   background-size: 5px 5px, 5px 5px, 1px 1.6rem;
   background-repeat: no-repeat;
 }
